Added API Routes and User Authentication
Used BasicAuth for all protected routes. To allow testing of, created
Unit Tests using JeST and added html reporter to generate html output
for later use. Created lua folder in backend folder for atomic actions
inside redis.
